<resources>
    <string name="app_name">PawPal</string>
    <string name="onboard1">Get Inspired</string>
    <string name="onboard1_desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua</string>
    <string name="onboard2">Feature Frenzy</string>
    <string name="onboard2_desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua</string>
    <string name="onboard3">Pet Memories</string>
    <string name="onboard3_desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua</string>
    <string name="next_button">Next</string>
    <string name="skip_button">Skip</string>
    <string name="onboard3_btn">Get Started!</string>
    <string name="signInMethodInput">Email / Phone No. / Username</string>
    <string name="passSignInInput">Password</string>
    <string name="signInBtn">Sign In</string>
    <string name="signUpMenu1">Pet\'s Details</string>
    <string name="signUpMenu2">Owner\'s Details</string>
    <string name="signUpMenu3">Login Credentials</string>
    <string name="signUpBtn">Sign Up</string>
    <string name="termsCheckBox">I agree to all Terms and Conditions</string>
    <string name="petsNameSignUp">Pet\'s Name</string>
    <string name="petsTypeSignUp">Pet\'s Type</string>
    <string name="petsBreedSignUp">Breed</string>
    <string name="petsSexSignUp">Sex</string>
    <string name="petsDOBSignUp">Date of Birth</string>
    <string name="ownersNameSignUp">Owner\'s Name</string>
    <string name="ownersPhoneSignUp">Owner\'s Phone No.</string>
    <string name="ownersEmailSignUp">Owner\'s Email Address</string>
    <string name="usernameSignUp">Username</string>
    <string name="passSignUp">Password</string>
    <string name="reenterPassSignUp">Re-enter Password</string>
    <string name="menu_home">Home</string>
    <string name="menu_pets">Pets</string>
    <string name="menu_guides">Guides</string>
    <string name="menu_chats">Chat</string>
    <string name="welcome_user">Welcome, User!</string>
    <string name="welcomeMsg">Take a look at what your\'s pet is up to today.</string>
    <string name="addRemindersNote">Add Reminders for !pet Now!</string>
</resources>