<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FDFDFD">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="24dp"
        android:gravity="center_horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/signUpMenu1"
            android:textStyle="bold"
            android:textColor="#252B5C"
            android:textSize="14sp"
            android:layout_marginBottom="4dp"/>

        <!-- Pet's Details -->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxWidth="488dp"
            android:layout_gravity="center_horizontal"
            android:hint="@string/petsNameSignUp"
            android:textColorHint="#90A0B7">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/petNameEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#000000"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/petTypeLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxWidth="488dp"
            android:layout_gravity="center_horizontal"
            android:hint="@string/petsTypeSignUp"
            android:textColorHint="#90A0B7"
            app:endIconMode="dropdown_menu"
            app:boxBackgroundMode="outline"
            app:boxBackgroundColor="@color/white"
            app:boxStrokeColor="@color/white"
            android:layout_marginTop="8dp">

            <AutoCompleteTextView
                android:id="@+id/petTypeDropdown"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:clickable="true"
                android:focusable="true"
                android:importantForAccessibility="yes"
                android:inputType="none"
                android:minHeight="48dp"
                android:paddingStart="12dp"
                android:paddingEnd="12dp"
                tools:ignore="LabelFor,SpeakableTextPresentCheck" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxWidth="488dp"
            android:layout_gravity="center_horizontal"
            android:hint="@string/petsBreedSignUp"
            android:layout_marginTop="8dp"
            android:textColorHint="#90A0B7">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/breedEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxWidth="488dp"
            android:layout_gravity="center_horizontal"
            android:hint="@string/petsSexSignUp"
            android:layout_marginTop="8dp"
            android:textColorHint="#90A0B7">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/sexEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/dobInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxWidth="488dp"
            android:layout_gravity="center_horizontal"
            android:hint="@string/petsDOBSignUp"
            android:layout_marginTop="8dp"
            android:textColorHint="#90A0B7"
            app:endIconDrawable="@drawable/ic_calendar"
            app:endIconMode="custom"
            app:endIconContentDescription="Pick Date" >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/dobEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="true"
                android:clickable="true"
                android:textColor="@color/black"/>
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/signUpMenu2"
            android:textStyle="bold"
            android:textColor="#252B5C"
            android:textSize="14sp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="4dp"/>

        <!-- Owner's Details -->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxWidth="488dp"
            android:layout_gravity="center_horizontal"
            android:hint="@string/ownersNameSignUp"
            android:textColorHint="#90A0B7">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ownerNameEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textColorHint="#757575" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxWidth="488dp"
            android:layout_gravity="center_horizontal"
            android:hint="@string/ownersPhoneSignUp"
            android:layout_marginTop="8dp"
            android:textColorHint="#90A0B7">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ownerPhoneEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="phone"
                android:textColor="@color/black"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxWidth="488dp"
            android:layout_gravity="center_horizontal"
            android:hint="@string/ownersEmailSignUp"
            android:layout_marginTop="8dp"
            android:textColorHint="#90A0B7">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ownerEmailEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:textColor="@color/black"/>
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/signUpMenu3"
            android:textStyle="bold"
            android:textColor="#252B5C"
            android:textSize="14sp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="4dp"/>

        <!-- Login Credentials -->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxWidth="488dp"
            android:layout_gravity="center_horizontal"
            android:hint="@string/usernameSignUp"
            android:textColorHint="#90A0B7">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/usernameEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxWidth="488dp"
            android:layout_gravity="center_horizontal"
            android:hint="@string/passSignUp"
            android:layout_marginTop="8dp"
            app:endIconMode="password_toggle"
            android:textColorHint="#90A0B7">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/passwordEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:textColor="@color/black"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxWidth="488dp"
            android:layout_gravity="center_horizontal"
            android:hint="@string/reenterPassSignUp"
            android:layout_marginTop="8dp"
            app:endIconMode="password_toggle"
            android:textColorHint="#90A0B7">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/reenterPasswordEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:textColor="@color/black"/>
        </com.google.android.material.textfield.TextInputLayout>

        <CheckBox
            android:id="@+id/termsCheckBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/termsCheckBox"
            android:textColor="@color/black"/>

        <Button
            android:id="@+id/signUpButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxWidth="488dp"
            android:layout_gravity="center_horizontal"
            android:text="@string/signUpBtn"
            android:backgroundTint="@color/pastel_pink"
            android:textColor="#FFFFFF"
            android:layout_marginTop="16dp"
            android:enabled="true"/>
    </LinearLayout>
</ScrollView>
