<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".mainMenu.HomeFragment"
    tools:layout_editor_absoluteX="0dp"
    tools:layout_editor_absoluteY="64dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:id="@+id/welcomeMsg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/lato"
            android:text="@string/welcome_user"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:layout_marginStart="10dp"/>

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/lato"
            android:text="@string/welcomeMsg"
            android:textColor="@color/black"
            android:textSize="12sp"
            android:layout_marginStart="10dp"/>

        <!-- CARDVIEW UNTUK ADD REMINDER -->
        <androidx.cardview.widget.CardView
            android:id="@+id/noteCard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            app:cardCornerRadius="16dp"
            app:cardElevation="4dp"
            android:visibility="visible"
            app:cardBackgroundColor="@android:color/white">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="16dp"
                android:gravity="center_vertical">

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:src="@drawable/ic_lightbulb"
                    android:layout_marginEnd="8dp" />

                <TextView
                    android:id="@+id/noteText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:maxLines="1"
                    android:ellipsize="end"
                    android:text="@string/addRemindersNote"
                    android:textSize="14sp"
                    android:textColor="@android:color/black" />

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:src="@drawable/black_arrow" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
